welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: illegal start of declaration
			if (estSurBiscuit():Boolean {c = c+1};
                                                     ^RunFour:3: error: ')' expected but ';' found.
			if (estSurBiscuit():Boolean {c = c+1};
                                                             ^